# Data_Engineering_with_Python

./: .gitignore  PostgreSQL.md  QUESTIONS.md  README.md  docker-compose.yml
airflow/dags/: main.py
app/: Dockerfile  Makefile  pyproject.toml  requirements.txt
app/scripts/: init_elasticsearch.sh  init_postgresql.sh
app/src/: main.py
app/src/config/: database.py
app/src/database/: repository.py  scf_repository.py
app/src/modules/: progress_bar.py
app/src/services/: data_extraction.py  data_generation.py  data_streaming.py
app/src/utils/: connection.py  data_transform.py  http_client.py
app/tests/: conftest.py  test_data_generator.py  test_database_config.py  test_database_pytest.py  test_elasticsearch_connector.py  test_http_request.py  test_postgres_connector.py  test_progress_bar.py
