[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["seilylook <seilylook@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
apache-airflow = {version = "^2.10.5", python = ">=3.8.1,<3.13"}
pandas = "^2.2.3"
confluent-kafka = "^2.8.2"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
pytest = "^8.3.4"
isort = "^6.0.0"
faker = "^36.1.1"
psycopg2 = "^2.9.10"
elasticsearch = "^8.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
